1.4: Fri Aug 29 07:11:55 EDT 2008
   - lost version.pm (not worth it)
   - cleaned up the makefile quite a bit
   - use prompt() instead of <STDIN> in makefile, to keep from
     causing cpan testers to chase me down with pitchfork

1.3.4: Sun Jul 27 06:42:04 EDT 2008
   - I finished the SVG exporter.  I don't think enough things do
     SVG correctly for it to matter though.  I was testing in eog
     (eye of gnome) and it thinks it's a transparent image and
     anti-aliases all the lines ...  I mean to run one of the
     files though a validator though.  Perhaps I'm just reading
     the standard incorrectly.
   - validates fine (after adding the doctype, which was only a
     warning...)   http://validator.w3.org/

1.3.4: Sun Jul 20 20:20:03 EDT 2008
   - I created the new sub-map generator
   - I renamed BasicImage to PNG
   - I created the SVG exporter.

1.3.3: Mon Jul 14th
   - I got the preliminary POE HTTP server
     going, just the arch though, no guts yet.

1.3.2: Sat Jun 28 07:42:02 EDT 2008
   - I got items and creatures to show up (as dots) on the map
     using the recently ported MapQueue stuff.

1.3.1: Mon Jun 23 20:59:10 EDT 2008
   - I commented some of the more esoteric portions of the
     spaghetti code known as the Editor.pm -- wow, it was hard to
     follow.  Now I remember what I was up to, but it took a
     solid hour to figure out.

1.3.0: Sun Jun 15 11:01:38 EDT 2008
   - added the MapQueue module (which includes d20-like visicalc)

1.2.20: Tue May 27 12:07:32 EDT 2008
   - (wow, use version has to be on the same line as our $VERSION
      for older EUMM)

1.2.19: Mon May 26 14:48:22 EDT 2008
   - I might as well do a new version of everything using
     version.pm while I wait for all my CPAN deletes to go
     through.  I just discovered that version.pm doesn't/didn't
     go core until perl 5.9...  I really wish I'd have prereqed
     it everywhere I used it, but I didn't.  *sigh*

1.2.18: Tue May 24 09:21:19 EDT 2008